--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<ul>
+<li><a routerLink="/">Home</a></li>
+<li><a routeLink="/search">Search</a></li>
+</ul>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
