Fix routerLink spelling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
 <li><a routerLink="/">Home</a></li>
-<li><a routeLink="/search">Search</a></li>
+<li><a routerLink="/search">Search</a></li>
 </ul>
 
 <div>
