Add search box,  button with a click handler

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,4 @@
-<p>
-  search works!
-</p>
+<div>
+    <input type="search" placeholder="Search Books" #search id="search" />
+    <button (click)="onSearch(search.value)">Search</button>
+</div>
