--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,14 @@
+
 <div>
     <input type="search" placeholder="Search Books" #search id="search" />
     <button (click)="onSearch(search.value)">Search</button>
+</div>
+<div *ngIf="books" id="f">
+ <div class="container">
+
+    <div class="col-md-2 results-container" *ngFor="let book of books" [routerLink]="['/search', book.volumeInfo.industryIdentifiers[0].identifier]">
+       {{book.volumeInfo.title}}
+       <p *ngIf="book.volumeInfo.imageLinks"><img src={{book.volumeInfo.imageLinks.smallThumbnail}} /></p>
+    </div>
+ </div>
 </div>
