Spelling correction onSearch to OnSearch

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,8 @@
 
 <div>
     <input type="search" placeholder="Search Books" #search id="search" />
-    <button (click)="onSearch(search.value)">Search</button>
+    <button (click)="OnSearch(search.value)">Search</button>
+    
 </div>
 <div *ngIf="books" id="f">
  <div class="container">
