--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,3 +1,34 @@
-<p>
-  result works!
-</p>
+
+<div id="f" class="container">
+  <div class="col-md-2">
+    <div class="results-container rightBorder" *ngIf="book">
+    
+      <p><img src={{book.volumeInfo.imageLinks.smallThumbnail}} /></p>
+      <h4>Rating {{book.volumeInfo.averageRating}}</h4>
+    </div>
+  </div>
+  <div class="col-md-4 rightBorder" *ngIf="book">
+   <h2> {{book.volumeInfo.title}} </h2>
+   <h4>Description</h4>
+   <p>{{book.volumeInfo.description}}</p>
+   <hr />
+   <h4>Category</h4>
+   <p>{{book.volumeInfo.categories}}</p>
+   <h4>Author</h4>
+   <p>{{book.volumeInfo.authors}}</p>
+   <h4>Publisher</h4>
+   <p>{{book.volumeInfo.publisher}}</p>
+   <h4>Published date</h4>
+   <p>{{book.volumeInfo.publishedDate}}</p>
+    <h4>Language</h4>
+   <p>{{book.volumeInfo.language}}</p>
+   <hr />
+  </div>
+  <div *ngIf>
+  <div class="col-md-5">
+      <h2>Preview</h2>
+      <div id="viewerCanvas" style="width: 120%; height: 700px"></div>
+  </div>
+  <div>
+
+</div>
